# rust_capability_api

./: Cargo.toml  LICENSE  README.md
capability_api/: Cargo.toml
capability_api/src/: lib.rs  object_capabilities.rs  token_capabilities.rs
diecup/: Cargo.toml
diecup/src/: lib.rs
facet_entrypoint/: Cargo.toml
facet_entrypoint/src/: main.rs
facet_external/: Cargo.toml
facet_external/src/: lib.rs
object_capabilities/: Cargo.toml
object_capabilities/src/: lib.rs
object_diecup/: Cargo.toml
object_diecup/src/: lib.rs
object_entrypoint/: Cargo.toml
object_entrypoint/src/: main.rs
prelude/src/: lib.rs
src/: lib.rs
token_capabilities/: Cargo.toml
token_capabilities/src/: lib.rs
token_diecup/: Cargo.toml
token_diecup/src/: lib.rs
token_entrypoint/: Cargo.toml
token_entrypoint/src/: main.rs
trusted/: Cargo.toml
trusted/src/: main.rs
