[package]
name = "token_entrypoint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prelude = { path = "../prelude" }
token_capabilities = { path = "../token_capabilities" }
token_diecup = { path = "../token_diecup" }
